--- a/week2/aboutme.html
+++ b/week2/aboutme.html
@@ -3,57 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="aboutme.css" />
     <title>About me</title>
   </head>
   <body>
-    <h1>About Me</h1>
-    <ol>
-      <li>
-        <h3>個人基本資訊</h3>
-        <h5>姓名: <span>江秉真</span></h5>
-        <h5>科系: <span>資訊管理學系</span></h5>
-        <h5>年級:<span>三年級</span></h5>
-      </li>
-      <li>
-        <h3>興趣愛好</h3>
-        <ul>
-          <li>童軍</li>
-          <li>畫圖</li>
-          <li>網球</li>
-        </ul>
-      </li>
-      <li>
-        <h3>學習經歷</h3>
-        <table style="border: 1px solid black" rules="all" cellpadding="5">
-          <tr>
-            <th>國中</th>
-            <th>高中</th>
-            <th>大學</th>
-          </tr>
-          <tr>
-            <td>內壢國中</td>
-            <td>平鎮高中</td>
-            <td>淡江大學</td>
-          </tr>
-        </table>
-      </li>
-      <li>
-        <h3>聯絡方式</h3>
-        <a
-          href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzTojBf4VJCGR4Z-QxG-7GozKDuWjCst6z6Q&s"
-          >Gmail: j5267812@gmail.com</a
-        >
-      </li>
-      <li>
-        <h3>個人照片</h3>
-        <img src="image.jpg" alt="" width="300" />
-      </li>
-      <li>
-        <h3>未來目標</h3>
-        <p>
-          希望之後可以財富自由，有時間做自己真的想做的事，學自己喜歡的東西。
-        </p>
-      </li>
-    </ol>
+    <div class="container">
+      <h1>About Me</h1>
+      <ol>
+        <li>
+          <h3>個人基本資訊</h3>
+          <h5>姓名: <span>江秉真</span></h5>
+          <h5>科系: <span>資訊管理學系</span></h5>
+          <h5>年級:<span>三年級</span></h5>
+        </li>
+        <li>
+          <h3>興趣愛好</h3>
+          <ul>
+            <li>童軍</li>
+            <li>畫圖</li>
+            <li>網球</li>
+          </ul>
+        </li>
+        <li>
+          <h3>學習經歷</h3>
+          <table style="border: 1px solid black" rules="all" cellpadding="5">
+            <tr>
+              <th>國中</th>
+              <th>高中</th>
+              <th>大學</th>
+            </tr>
+            <tr>
+              <td>內壢國中</td>
+              <td>平鎮高中</td>
+              <td>淡江大學</td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <h3>聯絡方式</h3>
+          <a
+            href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzTojBf4VJCGR4Z-QxG-7GozKDuWjCst6z6Q&s"
+            >Gmail: j5267812@gmail.com</a
+          >
+        </li>
+        <li>
+          <h3>個人照片</h3>
+          <img src="image.jpg" alt="" width="300" />
+        </li>
+        <li>
+          <h3>未來目標</h3>
+          <p>
+            希望之後可以財富自由，有時間做自己真的想做的事，學自己喜歡的東西。
+          </p>
+        </li>
+      </ol>
+    </div>
   </body>
 </html>
