--- a/week4/test_js.html
+++ b/week4/test_js.html
@@ -37,7 +37,7 @@
     <div id="message">這裡會顯示訊息</div>
     <p id="demo">這是一個段落</p>
     <input type="text" id="nameInput" placeholder="輸入你的名字" />
-    <script>
+    <!-- <script>
       // 1. 選取按鈕元素
       let button = document.getElementById("myButton");
       console.log(button); // 查看是否成功選取
@@ -68,6 +68,6 @@
       newPara.textContent = "這是用 JavaScript 新增的段落";
       newPara.style.color = "blue";
       document.body.appendChild(newPara);
-    </script>
+    </script> -->
   </body>
 </html>
